--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,9 @@
 @media only screen and (min-width: 720px) {
   body {
     width: 100%;
-    height: 100vh;
+    height: auto;
+    min-height: 100%;
+    margin-bottom: -5px;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
@@ -15,16 +17,16 @@
   }
 
   .adogtame-container {
-    max-width: 105%;
+    max-width: 104%;
     margin-left: -7px;
+    padding-top: 10px;
   }
 
   .apps-container {
     max-width: 1000px;
     margin: auto;
     padding-left: 20px;
-    padding-right: 10px;
-    padding-top: 10px;
+    padding-right: 20px;
   }
 
   .logo {
@@ -111,39 +113,90 @@
   }
 
   .home-container {
-    width: 99%;
+    width: 98.5%;
+    min-height: 100%;
     display:flex;
     flex-direction: row;
     justify-content: space-between;
+    overflow:auto;
   }
 
-  h3 {
-    line-height: 0.5;
+  h3{
+    line-height: 0.2;
   }
 
-  h3 span {
+  h4 {
+    line-height: 0.3;
+  }
+
+  h4 span {
     font-weight:400;
   }
 
   .dogs-app-container, .articles-app-container {
-    width: 48%;
+    width: 50%;
+    display: block;
+    overflow: auto;
+    height: auto;
+    min-height: 100%;
   }
 
+  .new-button, .input-button, .back-button, .delete-button, .edit-button, .register-button, .login-button{
+    display: inline-block;
+    outline: none;
+    cursor: pointer;
+    font-size: 12px;
+    line-height: 0.5;
+    border-radius: 500px;
+    transition-property: background-color,border-color,color,box-shadow,filter;
+    transition-duration: .3s;
+    border: 1px solid transparent;
+    letter-spacing: 1px;
+    width: 100px;
+    text-transform: uppercase;
+    white-space: normal;
+    font-weight: 700;
+    text-align: center;
+    padding: 10px 10px 15px 10px;
+    color: black;
+    box-shadow: inset 0 0 0 2px #616467;
+    background-color: lightgreen;
+    height: 20px;
+  }
+  
+  
+  .input-button {
+    margin: 5px auto 0px auto;
+    width: 140px;
+  }
+  
+  .delete-button {
+    background-color: pink;
+    color: black;
+    width: 80px;
+  }
+  
+  .edit-button {
+    width: 60px;
+    margin-right: 10px;
+  }
   .dog-container-head, .article-container-head {
-    width: 80%;
+    width: 90%;
     margin-left: auto;
     margin-right: auto;
     display: flex;
     align-items: center;
     justify-content: space-between;
+    margin-bottom: -25px;
   }
 
   .dog, .article {
-    width: 80%;
-    height: 60vh;
+    width: 90%;
     margin-left: auto;
     margin-right: auto;
-    overflow: hidden;
+    margin-top: 40px;
+    border-bottom: 1px solid brown;
+    padding-bottom: 20px;
   }
 
   .dog img {
@@ -153,6 +206,71 @@
   .article img {
     width: 100%;
   }
+
+  form {
+    width: 200px;
+    margin: 0px auto 20px auto;
+    padding: 20px 10px 10px 10px;
+    border: 2px solid black;
+    border-radius: 10px;
+    box-shadow: 5px 5px lightgray;
+  }
+  
+  input {
+    width: 95%;
+    margin-bottom: 10px;
+  }
+
+  label textarea {
+    width: 95%;
+  }
+
+  .article-form-container form {
+    width: 60%;
+    margin: 0px auto 20px auto;
+    padding: 20px 10px 10px 10px;
+    border: 2px solid black;
+    border-radius: 10px;
+    box-shadow: 5px 5px lightgray;
+  }
+
+  .vaccines-container {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+
+  }
+  
+  .vaccines-container label {
+    padding-bottom: 9px;
+  }
+
+  .article-form-container input {
+    width: 95%;
+    margin-bottom: 10px;
+  }
+
+  .article-form-container label textarea {
+    width: 95%;
+  }
+
+  .register-form-container, .login-form-container {
+    max-width: 1000px;
+    display: block;
+    height: calc(100vh - 350px);
+    min-height: 100%;
+    margin: auto;
+    padding-left: 20px;
+    padding-right: 20px;
+  }
+
+  .register-form, .login-form {
+    height:100%;
+    margin: auto;
+    padding-top: 10%;
+  }
 }
+
+
 
 
