--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,4 @@
-@media only screen and (min-width: 720px) {
+@media only screen and (min-width: 300px) {
   body {
     width: 100%;
     height: auto;
@@ -17,7 +17,7 @@
   }
 
   .adogtame-container {
-    max-width: 104%;
+    max-width: 100%;
     margin-left: -7px;
     padding-top: 10px;
     background-position: center;
@@ -72,14 +72,15 @@
 
   .navbar .content-bar {
     list-style-type: none;
-    width: 415px;
+    max-width: 80%;
     text-align: left;
     font-weight:300;
+    
   }
 
   .navbar .user-bar {
     list-style-type: none;
-    width: 180px;
+    max-width: 180px;
     font-weight:300;
   }
 
@@ -87,6 +88,7 @@
     text-decoration: none;
     color: black;
     border-right: 1px solid black;
+    padding-left: 5px;
     padding-right: 25px;
     text-align: center;
   }
@@ -138,7 +140,7 @@
   }
 
   h3{
-    line-height: 0.2;
+    line-height: 1;
   }
 
   h4 {
@@ -160,6 +162,11 @@
     margin-right: auto;
   }
 
+  .dogs-app-container:hover, .articles-app-container:hover {
+    border: 1px solid black;
+    border-radius: 15px;
+  }
+
   .veterinarians-app-containers {
     max-width: 80%;
     display: flex;
@@ -169,10 +176,9 @@
     min-height: 100%;
     margin-left: auto;
     margin-right: auto;
-    background-color: blue;
   }
 
-  .new-button, .input-button, .back-button, .delete-button, .edit-button, .register-button, .login-button{
+  .new-button, .input-button, .back-button, .delete-button, .edit-button, .register-button, .login-button, .logout-button{
     display: inline-block;
     outline: none;
     cursor: pointer;
@@ -200,10 +206,19 @@
     width: 140px;
   }
   
-  .delete-button {
+  .delete-button, .logout-button {
     background-color: pink;
     color: black;
     width: 80px;
+  }
+
+  .delete-button:hover, .logout-button:hover {
+    background-color: red;
+    color: white;
+  }
+
+  .logout-button {
+    margin: 5px;
   }
   
   .edit-button {
@@ -246,15 +261,23 @@
     line-height: 1;
   }
 
-  .dog, .article {
-    max-width: 100%;
+  .dog {
+    max-width: 98%;
     margin-left: auto;
     margin-right: auto;
     margin-top: 40px;
-    border-bottom: 1px solid brown;
     padding-bottom: 20px;
     padding-left: 10px;
-    padding-right: 10px;
+  }
+
+  .article {
+    max-width: 98%;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 40px;
+    padding-bottom: 20px;
+    padding-left: 20px;
+    padding-right: 20px;
   }
 
   .dog img, .article img {
@@ -360,7 +383,11 @@
     background-color: lightgreen;
     height: 20px;
   }
+
 }
+
+
+
 
 
 
