--- a/src/index.css
+++ b/src/index.css
@@ -88,8 +88,8 @@
     text-decoration: none;
     color: black;
     border-right: 1px solid black;
-    padding-left: 5px;
-    padding-right: 25px;
+    padding-left: 10px;
+    padding-right: 10px;
     text-align: center;
   }
 
@@ -132,6 +132,7 @@
     flex-direction: row;
     justify-content: space-between;
     overflow:auto;
+    gap:10px;
   }
 
   .veterinarian-home-container {
@@ -155,9 +156,8 @@
     max-width: 50%;
     display: flex;
     flex-direction: row;
+    height: fit-content;
     overflow: auto;
-    height: auto;
-    min-height: 100%;
     margin-left: auto;
     margin-right: auto;
   }
