--- a/src/index.css
+++ b/src/index.css
@@ -268,6 +268,7 @@
     margin-top: 40px;
     padding-bottom: 20px;
     padding-left: 10px;
+    border-bottom: 2px solid brown;
   }
 
   .article {
@@ -278,6 +279,7 @@
     padding-bottom: 20px;
     padding-left: 20px;
     padding-right: 20px;
+    border-bottom: 2px solid brown;
   }
 
   .dog img, .article img {
